api: implement state & console token
